--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
-jobs:
-  include:
-    - stage: deploy
-      os: linux
-      sudo: required
-      language: python
-      cache: pip
-      python: 3.6
-      scripts: ./run_deploy.sh
+os: linux
+sudo: required
+language: python
+cache: pip
+python: 3.6
+install: pip install -r requirements.txt
+scripts: ./run_deploy.sh
