--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ language: python
 cache: pip
 python: 3.6
 install: pip install -r requirements.txt
-scripts: ./run_deploy.sh
+script: ./run_deploy.sh
